--- a/platform/board/mx8qx_var_som/dcd/imx8qx_dcd_1.2GHz.cfg
+++ b/platform/board/mx8qx_var_som/dcd/imx8qx_dcd_1.2GHz.cfg
@@ -10,15 +10,15 @@ DEFINE	LP4_MANUAL_DERATE_WORKAROUND
 DEFINE	BD_DDR_RET    		/* Add/remove DDR retention */		
 					
 DEFINE	BD_DDR_RET_NUM_DRC	1	/* Number for DRCs to retain */		
-DEFINE 	BD_DDR_RET_NUM_REGION	2	/* DDR regions to save/restore */		
+DEFINE 	BD_DDR_RET_NUM_REGION	3	/* DDR regions to save/restore */		
 					
 /* Descriptor values for DDR regions saved/restored during retention */					
 DEFINE	BD_DDR_RET_REGION1_ADDR	0x80000000			
 DEFINE	BD_DDR_RET_REGION1_SIZE	64			
 DEFINE	BD_DDR_RET_REGION2_ADDR	0x80004040			
 DEFINE	BD_DDR_RET_REGION2_SIZE	16			
-					
-					
+DEFINE	BD_DDR_RET_REGION3_ADDR	0x80008000			
+DEFINE	BD_DDR_RET_REGION3_SIZE	48			
 					
 /*					
  * Device Configuration Data (DCD) Version 12					
@@ -79,7 +79,7 @@ DATA 4	0x41C80040	0xb
 DATA 4	0x41C80204	0x1			
 					
 /* DRAM 0 controller configuration begin */					
-DATA 4 	DDRC_MSTR_0   	0xC1080020	// Set LPDDR4, BL = 16 and active ranks		
+DATA 4 	DDRC_MSTR_0   	0xC3080020	// Set LPDDR4, BL = 16 and active ranks		
 DATA 4 	DDRC_DERATEEN_0   	0x00000203	// derate enable, derate values, byte to read MRR data		
 DATA 4 	DDRC_DERATEINT_0   	0x0124F800	// derate MR4 interval read		
 DATA 4 	DDRC_RFSHCTL0_0	0x0021F000	// REFRESH_BURST = 7		
@@ -109,12 +109,12 @@ DATA 4	DDRC_DFIMISC_0  	0x00000005	// dfi_data_cs_polarity
 DATA 4	DDRC_DFIUPD0_0  	0x00400003	// Disable the automatic dfi_ctrlupd_req generation		
 DATA 4	DDRC_DFIUPD1_0  	0x008000A0	// dfi_ctrlupd_req generation interval generation (min and max)		
 DATA 4	DDRC_DFIUPD2_0  	0x80000000	// dfi_phyupd_en		
-DATA 4	DDRC_ADDRMAP0_0 	0x0000001F	// addrmap_cs_bit0		
+DATA 4	DDRC_ADDRMAP0_0 	0x00000007	// addrmap_cs_bit0		
 DATA 4	DDRC_ADDRMAP3_0 	0x00000000	// addrmap_col_b9, addrmap_col_b8, addrmap_col_b7, addrmap_col_b6		
 DATA 4	DDRC_ADDRMAP4_0 	0x00001F1F	// addrmap_col_b10 and addrmap_col_b11 set to de-activated		
 DATA 4	DDRC_ADDRMAP1_0 	0x00080808	// addrmap_bank_b2, addrmap_bank_b1, addrmap_bank_b0		
-DATA 4	DDRC_ADDRMAP5_0 	0x07070707	// addrmap_row_b11, addrmap_row_b10_b2, addrmap_row_b1, addrmap_row_b0		
-DATA 4	DDRC_ADDRMAP6_0 	0x07070707	// addrmap_row_b15, addrmap_row_b14, addrmap_row_b13, addrmap_row_b12		
+DATA 4	DDRC_ADDRMAP5_0 	0x08080808	// addrmap_row_b11, addrmap_row_b10_b2, addrmap_row_b1, addrmap_row_b0		
+DATA 4	DDRC_ADDRMAP6_0 	0x08080808	// addrmap_row_b15, addrmap_row_b14, addrmap_row_b13, addrmap_row_b12		
 DATA 4	DDRC_DBICTL_0   	0x00000007	// rd_dbi_en=wr_dbi_en=dm_en=1		
 DATA 4	DDRC_ODTMAP_0   	0x00002211	// rank[3:0]_wr_odt, rank[3:0]_wr_odt		
 DATA 4	DDRC_PCTRL_0_0  	0x00000001	// Enable port 0		
@@ -150,7 +150,7 @@ DATA 4 	DDR_PHY_DX4GCR3_0	0xFFE18587	// uncommented to disable byte lane 4 since
 // Set-up DRAM Configuration Register					
 DATA 4	DDR_PHY_DCR_0	0x0000040D	// LPDDR4 selection with 8 bank		
 // Set-up byte and bit swapping registers					
-DATA 4	DDR_PHY_PGCR8_0    	0x0001000A			
+DATA 4	DDR_PHY_PGCR8_0    	0x0003000A			
 DATA 4	DDR_PHY_DX0DQMAP0_0	0x00061032	// DQ bit 0/1/2/3/4 remapping		
 DATA 4	DDR_PHY_DX0DQMAP1_0	0x00004578	// DQ bit 5/6/7 and DM remapping		
 DATA 4	DDR_PHY_DX1DQMAP0_0	0x00071032	// DQ bit 0/1/2/3/4 remapping		
@@ -293,7 +293,7 @@ DATA 4 	DDR_PHY_BISTAR4_0	0x00003FFF	// BMROW=0x4000 (limit to min rows in JEDEC
 // Note that DTCR0.RFSHDT are set to 0x0 as a workaround for errata e10946 (Synopsys					
 // case 9001045655: Design limitation in LPDDR4 mode: REFRESH must be disabled during DQS2DQ training).					
 DATA 4 	DDR_PHY_DTCR0_0	0x000071C7	// Set DTRPTN to 0x7. RFSHDT=0		
-DATA 4 	DDR_PHY_DTCR1_0	0x00010236	// Set RANKEN		
+DATA 4 	DDR_PHY_DTCR1_0	0x00030236	// Set RANKEN		
 					
 // Launch Write leveling					
 DATA 4 	DDR_PHY_PIR_0	0x200			
@@ -320,9 +320,6 @@ DATA 4	DDR_PHY_PIR_0	0x0010F801
 CHECK_BITS_SET 4	DDR_PHY_PGSR0_0 	0x1			
 CHECK_BITS_CLR 4	DDR_PHY_PGSR0_0 	0x7FF40000			
 					
-// run rdbi deskew training
-RDBI_bit_deskew(0);
-
 // Launch VREF training					
 DATA 4	DDR_PHY_PIR_0	0x00020000			
 DATA 4	DDR_PHY_PIR_0	0x00020001			
@@ -349,5 +346,5 @@ CLR_BIT 4	DDR_PHY_PGCR6_0	0x1
 DATA 4 	0x41c80504	0x400			
 //Check that controller is ready to operate					
 CHECK_BITS_SET 4	DDRC_STAT_0	0x1			
-
-ddrc_lpddr4_derate_init(BD_DDR_RET_NUM_DRC);
+					
+// ddrc_lpddr4_derate_init(BD_DDR_RET_NUM_DRC);					
